Styling - additional images for about screen - fixed bug with content alignment on page

--- a/frontend/src/components/view-recipe-search/view-recipe-search.style.css
+++ b/frontend/src/components/view-recipe-search/view-recipe-search.style.css
@@ -46,3 +46,15 @@
   line-height: 1;
   letter-spacing: -1px;
 }
+
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
